# third-party

./: .gitmodules  README.md  third_party.sln
DirectX/DirectShow/BaseClasses/: baseclasses.vcxproj
arcsoft_facesdk/: releasenotes.txt
arcsoft_facesdk/samplecode/: ReadMe.txt
arcsoft_facesdk/samplecode/ASFTestDemo/: CMakeLists.txt  samplecode.cpp
arcsoft_facesdk/samplecode/ASFTestDemo/inc/: merror.h
ffmpeg/: ffmpeg.h
ffmpeg-3.4.5/: config.asm  config.h
ffmpeg-3.4.5/android/arm64-v8a/lib/: ffmpeg-all.mri  libmp3lame.la  libogg.la  libopus.la  libshine.la  libvorbis.la  (+2 more)
ffmpeg-3.4.5/doc/: config.texi
ffmpeg-3.4.5/ffbuild/: config.fate  config.mak  config.sh
ffmpeg-3.4.5/libavdevice/: libavdevice.pc
ffmpeg-3.4.5/libpostproc/: libpostproc.pc
ffmpeg-3.4.5/libswresample/: libswresample.pc
ffmpeg-3.4.5/libswscale/: libswscale.pc
getopt9/lib/: getoptd.lib
getopt9/src/: getopt.sln  getopt.vcxproj  getopt.vcxproj.filters
googletest/googletest/msvc/: UpgradeLog.htm  gtest.vcxproj  gtest_main.vcxproj  gtest_prod_test.vcxproj  gtest_unittest.vcxproj
jrtplib/jrtplib-3.11.1/src/: rtpudpv4transmitter.cpp
jrtplib/mac/include/: rtpconfig.h
jrtplib/mac/lib/: libjrtp.3.11.1.dylib  libjrtp.dylib
jrtplib/x64-ubuntu18-gcc/include/: jrtplib.h
jrtplib/x64-windows-cl14/include/: rtpconfig.h  rtplibraryversioninternal.h
jsoncpp/src/: Android.mk
jsoncpp/x64-ubuntu18-gcc/pkgconfig/: jsoncpp.pc
jsoncpp/x86-windows-cl14/lib/: jsoncpp-Debug.lib
libsrtp/: CMakeLists.txt  comple_mac.sh
libsrtp/libsrtp/: libsrtp.vcxproj
libsrtp/x86-windows-cl14/lib/: libsrtp-O.lib  libsrtp-g.lib
libuv/mac/lib/: libuv.1.dylib  libuv.dylib.lnk
libuv/src/: android-configure  libuv.vcxproj  libuv.vcxproj.filters
libuv/x86-windows-cl14/lib/: libuv-Debug.lib  libuvd.lib
live.2018.09.18/: Live555.vcxproj.filters
live555/: Live555.vcxproj  Makefile  config.macosx  mksdk.sh
live555/BasicUsageEnvironment/: Makefile
live555/UsageEnvironment/: Makefile
live555/groupsock/: Makefile
live555/liveMedia/: Makefile  StreamParser.cpp
live555/mediaServer/: Makefile
live555/proxyServer/: Makefile
live555/testProgs/: Makefile
openssl/: compile.sh  setenv-android.sh
openssl/src/openssl-1.0.2l/: MINFO  Makefile  Makefile.bak
openssl/x86-windows-cl14/lib/: libeay32.lib  ssleay32.lib
uWebSockets/src/: Android.mk  CMakeLists.txt  Makefile  VC++.vcxproj  compile_android.sh  libuws.vcxproj  libuws.vcxproj.filters  vs2015.sln
uWebSockets/src/src/: Asio.h  Epoll.cpp  Epoll.h  Group.cpp  Group.h  HTTPSocket.cpp  HTTPSocket.h  Hub.cpp  Hub.h  Libuv.h  Networking.h  Node.cpp  Node.h  Socket.h  WebSocket.cpp  WebSocketProtocol.h
uWebSockets/src/x64/Debug/: libuws.idb
uWebSockets/src/x64/Debug/libuws.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libuws.lastbuildstate
zlib/x86-windows-cl14/include/: zlib.h
zlib/x86-windows-cl14/lib/: zlibstat.lib
(+96 files in other folders)
